src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_ID_Creation_Status_Code__c</fullName>
        <formula>Account.ID_Creation_Status_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID Creation Status Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID_Status__c</fullName>
        <formula>TEXT(Account.ID_Status2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>text(Account.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_UUID__c</fullName>
        <formula>Account.UUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account UUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ambassador_Tier__c</fullName>
        <label>Ambassador Tier</label>
        <picklist>
            <controllingField>WeWork_ambassador__c</controllingField>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Broker_Email__c</fullName>
        <label>Broker Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Broker_Phone__c</fullName>
        <label>Broker Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Brokerage_Company_Name__c</fullName>
        <label>Brokerage Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Address__c</fullName>
        <formula>Location__r.Address__c &amp; &quot;, &quot; &amp;  Location__r.City__c &amp; &quot;, &quot; &amp;  Location__r.State__c &amp; &quot; &quot; &amp; Location__r.Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <formula>Location__r.Location_No_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <picklist>
            <picklistValues>
                <fullName>1-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>Name of the Company of the Contact should be saved here.</description>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Broker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Broker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Opportunity_Reservable__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Convert_Lead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Convert Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_CRM_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom CRM User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_Hidden__c</fullName>
        <externalId>true</externalId>
        <label>External ID (Hidden)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor_ID__c</fullName>
        <label>Floor ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor_Number__c</fullName>
        <label>Floor Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_DD__c</fullName>
        <formula>CONTAINS(Reservable__r.Name, &quot;DD&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has DD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_Creation_Status_Code__c</fullName>
        <label>ID Creation Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Error_Message__c</fullName>
        <label>ID Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Kind__c</fullName>
        <formula>IF (
  OR(
     ISPICKVAL(Account.Type , &apos;Member&apos;),  
     ISPICKVAL(Account.Type , &apos;active&apos;),
     ISPICKVAL(Account.Type , &apos;Previous Member&apos;)
  ),
  &apos;member&apos;,
  &apos;potential&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Kind</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Last_Sync__c</fullName>
        <label>ID Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ID_Member_Type__c</fullName>
        <formula>IF( Account.Primary_Member__r.Id = Id , &quot;Licensee&quot;, &quot;Employee&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Member Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art, Fashion, and Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services and Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health/Beauty/Wellness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare &amp; Pharmaceutical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources / Recruiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing, Social Media, and/or PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media and Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit/Causes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology - E-commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology - IT Products and Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology - Software/App Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology - Web Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecommunications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel, Hospitality, and Lodging</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Primary_Member__c</fullName>
        <formula>IF( Account.Primary_Member__r.Id = Id, 
  true, 
  false
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Primary Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keycard_Batch__c</fullName>
        <label>Keycard Batch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keycard_Number__c</fullName>
        <label>Keycard Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kind__c</fullName>
        <label>Kind</label>
        <picklist>
            <picklistValues>
                <fullName>Guest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WeWork Employee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leads_Marketing_Email_Opens__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leads Marketing Email Opens</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <label>Locale</label>
        <picklist>
            <picklistValues>
                <fullName>af</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>af-ZA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sq</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sq-AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>gsw-FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>am-ET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ar-DZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ar-BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ar-EG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ar-IQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ar-JO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ar-KW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ar-LB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ar-LY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ar-MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ar-OM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ar-QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ar-SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ar-SY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ar-TN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ar-AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ar-YE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hy-AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>as-IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>az</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>az-Cyrl-AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>az-Latn-AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ba-RU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_Interested__c</fullName>
        <inlineHelpText>This field is used to manage Waitlist for Marketing use.</inlineHelpText>
        <label>Location Interested</label>
        <picklist>
            <picklistValues>
                <fullName>NYC-Bryant Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYC-Charging Bull</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYC-Empire State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYC-Fulton Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYC-Madison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYC-Meatpacking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYC-SoHo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYC-SoHo West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYC-Park South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYC-West Broadway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYC-NoMad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA-Hollywood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF-Golden Gate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF-SoMa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOS-South Station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOS-Fort Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHI-West Loop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC-Wonder Bread Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC-Chinatown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEA-South Lake Union</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LON-South Bank</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Location_Text__c</fullName>
        <label>Location Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>I don&apos;t know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple cities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amsterdam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlanta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Be&apos;er Sheva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berkeley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berlin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chicago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Herzliya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hing Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miami</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montreal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philadelphia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Jose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seattle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seoul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tel Aviv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wahington, D.C.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Most_recent_opportunity_stage__c</fullName>
        <label>Most recent opportunity stage</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_recent_tour_date__c</fullName>
        <description>refer JIRA ticket ST-40</description>
        <label>Most recent tour date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Office_Number__c</fullName>
        <label>Office Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Member__c</fullName>
        <formula>if( Account.Primary_Member__r.Id =  Id , &quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Office_Number__c</fullName>
        <formula>Account.Parent.Primary_Member__r.Office_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Office Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Interests__c</fullName>
        <label>Product Interests</label>
        <picklist>
            <picklistValues>
                <fullName>Wework.com Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential Space</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <picklist>
            <picklistValues>
                <fullName>WeWork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WeLive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quick_Quote_Location__c</fullName>
        <externalId>true</externalId>
        <label>Quick Quote Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Code__c</fullName>
        <label>Referral Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reservable_UUID__c</fullName>
        <label>Reservable UUID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reservable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reservable</label>
        <referenceTo>Reservable__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reservable_of_Primary_Member__c</fullName>
        <formula>Contact__r.Opportunity__r.Reservation__r.Reservable__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reservable of Primary Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salutation_Name__c</fullName>
        <description>Salutation used on Email Templates (Hi John Doe)</description>
        <formula>SUBSTITUTE( FirstName ,&apos;[not provided]&apos;, &apos;&apos;) + &apos; &apos; + SUBSTITUTE( LastName ,&apos;[not provided]&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salutation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sign_In_Count__c</fullName>
        <label>Sign In Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyReminder__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>SurveyReminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>TIMBASURVEYS__Survey__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__reminderStringSize__c</fullName>
        <formula>LEN(TIMBASURVEYS__SurveyReminder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>reminderStringSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Events__c</fullName>
        <label>Total Events</label>
        <summaryForeignKey>Member_Event__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Licensee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User_Kind__c</fullName>
        <label>User Kind</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WW_Sync_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WW Sync Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WW_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this record was successfully synced with WeWork.com API</inlineHelpText>
        <label>WW Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Waitlist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waitlist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WeConnect_ID__c</fullName>
        <label>WeConnect ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WeWork_ambassador__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WeWork Ambassador</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Status__c</fullName>
        <label>Last Sync Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Result__c</fullName>
        <label>Zendesk Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_OutofSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zendesk_OutofSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_oldTags__c</fullName>
        <label>Zendesk_oldTags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__isCreatedUpdatedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in trigger to prevent looping of after insert and update. This flag is used to stop the contact that came for creation to get updated again thereby preventing the loop</description>
        <label>isCreatedUpdatedFlag</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>